# ecn_sensorbased

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.bak.bak  README.md  package.xml
include/ecn_sensorbased/: fusion.h  optim.h  pioneer_cam.h  qp.h  utils.h
launch/: coppelia_sim.launch  test.launch  us_config.yaml  vrep.launch
scenes/: pioneer.ttt
scripts/: check_vitals.py  sensor_bridge.py  us.py
src/: main.cpp  optim.cpp  pioneer_cam.cpp  qp.cpp
subject/: sensorbased_lab.tex
urdf/: pioneer.urdf
